RESOLVED FIXED35779
Fix event handling in WebPluginContainer
https://bugs.webkit.org/show_bug.cgi?id=35779
Summary Fix event handling in WebPluginContainer
John Abd-El-Malek
Reported 2010-03-04 20:03:53 PST
We have the code that does "handled != handled" in WebPluginContainerImpl.cpp. We need to move this logic to webplugin_delegate_impl_win.cc and webplugin_delegate_impl_gtk.cc since we don't want this for Pepper plugins. This code is needed because Flash/Silverlight (only two I could test in windowless) return false even when they use the event. On Windows, Flash is sending the event to its windowed wndproc, which returns 0 when an event is handled per Windows convention. Not sure what's happening on Linux, but I verified that it's also needed.
Attachments
Proposed patch (2.80 KB, patch)
2010-03-04 20:23 PST, John Abd-El-Malek
no flags
John Abd-El-Malek
Comment 1 2010-03-04 20:23:32 PST
Created attachment 50084 [details] Proposed patch
WebKit Commit Bot
Comment 2 2010-03-05 18:34:53 PST
Comment on attachment 50084 [details] Proposed patch Clearing flags on attachment: 50084 Committed r55606: <http://trac.webkit.org/changeset/55606>
WebKit Commit Bot
Comment 3 2010-03-05 18:34:58 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.