2010-03-05  John Abd-El-Malek  <jam@chromium.org>

Reviewed by Darin Fisher.

        Take out code hack that flips the result of NPP_HandleEvent.  This needs to move to
        the NPAPI code so that Pepper plugins don't hit it.
        https://bugs.webkit.org/show_bug.cgi?id=35779

        * public/WebPluginContainer.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleMouseEvent):
        (WebKit::WebPluginContainerImpl::handleKeyboardEvent):

Canonical link: https://commits.webkit.org/46903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55606 268f45cc-cd09-0410-ab3c-d52691b4dbfc