WebKit/chromium/public/WebPluginContainer.h
@@ -33,6 +33,9 @@
 
 struct NPObject;
 
+// Temporary ifdef since this is two-sided.
+#define WEBPLUGINCONTAINER_DOESNT_MODIFY_HANDLED 1
+
 namespace WebKit {
 
 class WebString;
