WebKit/chromium/src/WebPluginContainerImpl.cpp
@@ -360,20 +360,6 @@ void WebPluginContainerImpl::handleMouseEvent(MouseEvent* event)
 
     WebCursorInfo cursorInfo;
     bool handled = m_webPlugin->handleInputEvent(webEvent, cursorInfo);
-#if !OS(DARWIN)
-    // TODO(pkasting): http://b/1119691 This conditional seems exactly
-    // backwards, but if I reverse it, giving focus to a transparent
-    // (windowless) plugin fails.
-    handled = !handled;
-    // TODO(awalker): oddly, the above is not true in Mac builds.  Looking
-    // at Apple's corresponding code for Mac and Windows (PluginViewMac and
-    // PluginViewWin), setDefaultHandled() gets called when handleInputEvent()
-    // returns true, which then indicates to WebCore that the plugin wants to
-    // swallow the event--which is what we want.  Calling setDefaultHandled()
-    // fixes several Mac Chromium bugs, but does indeed prevent windowless plugins
-    // from getting focus in Windows builds, as pkasting notes above.  So for
-    // now, we only do so in Mac builds.
-#endif
     if (handled)
         event->setDefaultHandled();
 
@@ -396,10 +382,6 @@ void WebPluginContainerImpl::handleKeyboardEvent(KeyboardEvent* event)
 
     WebCursorInfo cursor_info;
     bool handled = m_webPlugin->handleInputEvent(webEvent, cursor_info);
-#if !OS(DARWIN)
-    // TODO(pkasting): http://b/1119691 See above.
-    handled = !handled;
-#endif
     if (handled)
         event->setDefaultHandled();
 }
